# ESP_roast_test

backend/be_qt/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  dataManager.cpp  dataManager.h  main.cpp
backend/python_old/: server.py
backend/python_old/fizyka/: airFlowTemp.py  beanNewton.py
backend/python_old/profileGenerator/: __init__.py  functionFromPoints.py
